# mgbench

./: CMakeLists.txt
cmake/: feature_test.cmake
include/: mgbench.hpp
include/mgbench/: add_benchmark.hpp  benchmark_runner.hpp  benchmark_suite.hpp  configuration.hpp  nvprof.hpp  report_result.hpp  utils.hpp
src/: benchmark_runner.cpp  benchmark_suite.cpp  main.cpp  nvprof.cpp  run_kernels.hpp
